Thu Sep 11 15:23:26 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigdivrem): adjust length for division and remainder.
	  a patch from TOYOFUKU Chikanobu <nobu_toyofuku at nifty.com> in 
	  [ruby-dev:36231].

Thu Sep 11 02:59:47 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_binwrite): extracted from io_fwrite.

Thu Sep 11 02:25:34 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (make_encoding): new function.
	  (make_encobj): new function.
	  (econv_s_asciicompat_encoding): use make_encoding.
	  (rb_econv_open_exc): use SUPPLEMENTAL_CONVERSION.
	  (econv_convpath): use encoding object in the result.

Thu Sep 11 02:14:38 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_convpath): new method.

Wed Sep 10 23:00:43 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* tool/compile_prelude.rb: print "<internal:prelude>" instead of
	  "prelude.rb" on stack trace.  [ruby-dev:36129]

Wed Sep 10 21:19:58 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (big2str_karatsuba): remove unnecessary fixnum code.  a
	  patch from TOYOFUKU Chikanobu <nobu_toyofuku at nifty.com> in
	  [ruby-dev:36217].

Wed Sep 10 21:09:32 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_err_in_callback.rb: InternetExplorer should
	  be closed.

	* test/win32ole/err_in_callback.rb: ditto.

Wed Sep 10 18:25:19 2008  akira yamada  <akira@rice.p.arika.org>

	* lib/uri/common.rb (URI::Parser): new class.
	
	* lib/uri/mailto.rb, lib/uri/generic.rb: follow the above change.

	* test/uri/test_parser.rb: added tests for URI::Parser.
	
Wed Sep 10 10:35:32 2008  Takeyuki Fujioka  <xibbar@ruby-lang.org>

	* lib/cgi/cookie.rb (CGI::Cookie#to_s): performance improvement
	  from http://jp.rubyist.net/magazine/?0023-Cgirb.

Wed Sep 10 10:12:29 2008  akira yamada  <akira@arika.org>

	* lib/sync.rb (Sync_m#sync_exclusive): fixed
	  typo. [ruby-dev:36233] [RubyForge#11680]

Wed Sep 10 01:57:23 2008  Tanaka Akira  <akr@fsij.org>
