@@ -1,3 +1,7 @@
+Thu Sep 11 19:09:25 2008  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/iconv/iconv.c: add attention for machine independent.
+
 Thu Sep 11 15:23:26 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* bignum.c (bigdivrem): adjust length for division and remainder.
